--- a/HTML/google.html
+++ b/HTML/google.html
@@ -5,91 +5,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "../CSS/style.css">
 </head>
 <body>
-    <div id = "toolbar">
-        <p>Gmail</p>
-        <p>이미지</p>
-        <p>ID</p>
-        <img src = "../images/tool_bar/icon_more_vert.svg">
-        <img src = "../images/tool_bar/ADea4I7QEqDZdvRKwVMjvjSOa9wukyChIRc48dLl4Tfp=s128-b16-cc-rp-mo.png">
-    </div>
-    <div id = "title">
-        <img src = "../images/google_logo.svg">
-    </div>
-    <div id = "searchbar">
-        <img src = "../images/search_bar/search.svg">
-        <input id ="input" type = "search" placeholder = "Google 검색 또는 URL 입력">
-        <img src = "../images/search_bar/googlemic_clr_24px.svg">
-    </div>
-    <div id = "container" style = "--column-count : 4; --row-count : 2;">
-        <a class = "tile" title = "네이버" href = "https://www.naver.com/">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/naver.png">
+    <div id = "content">
+        <div id = "toolbar-text">
+            <a id = "gmail-bar" href = "https://mail.google.com/mail/?tab=rm&authuser=0&ogbl">
+                <span>Gmail</span>
+            </a>
+            <a id = "image-bar" href = "https://www.google.co.kr/imghp?hl=ko&tab=ri&authuser=0&ogbl">
+                <span>이미지</span>
+            </a>
+        </div>
+        <div id = "toolbar-img">
+            <a href = "https://www.google.co.kr/intl/ko/about/products?tab=rh">
+                <svg id = "app" viewbox = "0 0 24 24" style = "fill:gray">
+                    <path d = "M 6 8 c 1.1 0 2 -0.9 2 -2 s -0.9 -2 -2 -2 s -2 0.9 -2 2 s 0.9 2 2 2 Z M 12 20 c 1.1 0 2 -0.9 2 -2 s -0.9
+                     -2 -2 -2 s -2 0.9 -2 2 s 0.9 2 2 2 Z M 6 20 c 1.1 0 2 -0.9 2 -2 s -0.9 -2 -2 -2 s -2 0.9 -2 2 s 0.9 2 2 2 Z M 6 14 
+                     c 1.1 0 2 -0.9 2 -2 s -0.9 -2 -2 -2 s -2 0.9 -2 2 s 0.9 2 2 2 Z M 12 14 c 1.1 0 2 -0.9 2 -2 s -0.9 -2 -2 -2 s -2 0.9 
+                     -2 2 s 0.9 2 2 2 Z M 16 6 c 0 1.1 0.9 2 2 2 s 2 -0.9 2 -2 s -0.9 -2 -2 -2 s -2 0.9 -2 2 Z M 12 8 c 1.1 0 2 -0.9 2 -2 
+                     s -0.9 -2 -2 -2 s -2 0.9 -2 2 s 0.9 2 2 2 Z M 18 14 c 1.1 0 2 -0.9 2 -2 s -0.9 -2 -2 -2 s -2 0.9 -2 2 s 0.9 2 2 2 Z 
+                     M 18 20 c 1.1 0 2 -0.9 2 -2 s -0.9 -2 -2 -2 s -2 0.9 -2 2 s 0.9 2 2 2 Z"></path>
+                </svg>
+            </a>
+            <a href = "https://accounts.google.com/SignOutOptions?hl=ko&continue=https://www.google.com%3Fhl%3Dko">
+                <img id = "id-img" src = "../images/tool_bar/ADea4I7QEqDZdvRKwVMjvjSOa9wukyChIRc48dLl4Tfp=s128-b16-cc-rp-mo.png">
+            </a>
+        </div>
+        <div id = "title">
+            <img src = "../images/google_logo.svg">
+        </div>
+        <div id = "searchbar">
+            <div id = "searchbar-background">
+                <img id = "search-tool" src = "../images/search_bar/search.svg">
+                <input id ="input" type = "search" placeholder = "Google 검색 또는 URL 입력">
+                <img id = "mic" src = "../images/search_bar/googlemic_clr_24px.svg">
             </div>
-            <div class = "tile-name">
-                <span>네이버</span>
-            </div>
-        </a>
-        <a class = "tile" title = "백준" href = "https://www.acmicpc.net/">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/baekjoon.png">
-            </div>
-            <div class = "tile-name">
-                <span>백준</span>
-            </div>
-        </a>
-        <a class = "tile" title = "백준 티어" href = "https://solved.ac/">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/solved_ac.png">
-            </div>
-            <div class = "tile-name">
-                <span>백준</span>
-            </div>
-        </a>
-        <a class = "tile" title = "BlackBoard" href = "https://kulms.korea.ac.kr/">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/blackboard.png">
-            </div>
-            <div class = "tile-name">
-                <span>BlackBoard</span>
-            </div>
-        </a>
-        <a class = "tile" title = "알고리즘 공부" href = "https://blog.naver.com/kks227/220775134486">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/naver_blog.png">
-            </div>
-            <div class = "tile-name">
-                <span>알고리즘 공부</span>
-            </div>
-        </a>
-        <a class = "tile" title = "빌드 사이트" href = "https://ideone.com/">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/naver_blog.png">
-            </div>
-            <div class = "tile-name">
-                <span>빌드 사이트</span>
-            </div>
-        </a>
-        <a class = "tile" title = "인공지능 신문" href = "https://www.aitimes.kr/">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/ai_news.png">
-            </div>
-            <div class = "tile-name">
-                <span>빌드 사이트</span>
-            </div>
-        </a>
-        <a class = "tile" title = "바로가기 추가">
-            <div class = "tile-icon">
-                <img drggable = "false" alt src = "../images/sites/add.svg">
-            </div>
-            <div class = "tile-name">
-                <span>바로가기 추가</span>
-            </div>
-        </a>
-    </div>
-    <div id = "settings">
-        <p>Chrome 맞춤설정</p>
+        </div>
+        <div id = "container" style = "column-count : 4 ">
+            <a class = "tile" title = "네이버" href = "https://www.naver.com/">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/naver.png">
+                </div>
+                <div class = "tile-name">
+                    <span>네이버</span>
+                </div>
+            </a>
+            <a class = "tile" title = "백준" href = "https://www.acmicpc.net/">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/baekjoon.png">
+                </div>
+                <div class = "tile-name">
+                    <span>백준</span>
+                </div>
+            </a>
+            <a class = "tile" title = "백준 티어" href = "https://solved.ac/">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/solved_ac.png">
+                </div>
+                <div class = "tile-name">
+                    <span>백준</span>
+                </div>
+            </a>
+            <a class = "tile" title = "BlackBoard" href = "https://kulms.korea.ac.kr/">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/blackboard.png">
+                </div>
+                <div class = "tile-name">
+                    <span>BlackBoard</span>
+                </div>
+            </a>
+            <a class = "tile" title = "알고리즘 공부" href = "https://blog.naver.com/kks227/220775134486">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/naver_blog.png">
+                </div>
+                <div class = "tile-name">
+                    <span>알고리즘 공부</span>
+                </div>
+            </a>
+            <a class = "tile" title = "빌드 사이트" href = "https://ideone.com/">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/ide.png">
+                </div>
+                <div class = "tile-name">
+                    <span>빌드 사이트</span>
+                </div>
+            </a>
+            <a class = "tile" title = "인공지능 신문" href = "https://www.aitimes.kr/">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/ai_news.png">
+                </div>
+                <div class = "tile-name">
+                    <span>빌드 사이트</span>
+                </div>
+            </a>
+            <a class = "tile" title = "바로가기 추가">
+                <div class = "tile-icon">
+                    <img draggable = "false" alt src = "../images/sites/add.svg">
+                </div>
+                <div class = "tile-name">
+                    <span>바로가기 추가</span>
+                </div>
+            </a>
+        </div>
+        <div id = "settings">
+            <img id = "pencil" draggable = "false" alt src = "../images/icon_pencil.svg">
+            <span>        Chrome 맞춤설정</span>
+        </div>
     </div>
 </body>
 </html>
