fix the css with ../

--- a/HTML/google.html
+++ b/HTML/google.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href = "CSS/style.css">
+    <link rel = "stylesheet" href = "../CSS/style.css">
 </head>
 <body>
     <div id = "content">
@@ -29,23 +29,23 @@
                 </svg>
             </a>
             <a href = "https://accounts.google.com/SignOutOptions?hl=ko&continue=https://www.google.com%3Fhl%3Dko">
-                <img id = "id-img" src = "images/tool_bar/ADea4I7QEqDZdvRKwVMjvjSOa9wukyChIRc48dLl4Tfp=s128-b16-cc-rp-mo.png">
+                <img id = "id-img" src = "../images/tool_bar/ADea4I7QEqDZdvRKwVMjvjSOa9wukyChIRc48dLl4Tfp=s128-b16-cc-rp-mo.png">
             </a>
         </div>
         <div id = "title">
-            <img src = "images/google_logo.svg">
+            <img src = "../images/google_logo.svg">
         </div>
         <div id = "searchbar">
             <div id = "searchbar-background">
-                <img id = "search-tool" src = "images/search_bar/search.svg">
+                <img id = "search-tool" src = "../images/search_bar/search.svg">
                 <input id ="input" type = "search" placeholder = "Google 검색 또는 URL 입력">
-                <img id = "mic" src = "images/search_bar/googlemic_clr_24px.svg">
+                <img id = "mic" src = "../images/search_bar/googlemic_clr_24px.svg">
             </div>
         </div>
         <div id = "container" style = "column-count : 4 ">
             <a class = "tile" title = "네이버" href = "https://www.naver.com/">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/naver.png">
+                    <img draggable = "false" alt src = "../images/sites/naver.png">
                 </div>
                 <div class = "tile-name">
                     <span>네이버</span>
@@ -53,7 +53,7 @@
             </a>
             <a class = "tile" title = "백준" href = "https://www.acmicpc.net/">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/baekjoon.png">
+                    <img draggable = "false" alt src = "../images/sites/baekjoon.png">
                 </div>
                 <div class = "tile-name">
                     <span>백준</span>
@@ -61,7 +61,7 @@
             </a>
             <a class = "tile" title = "백준 티어" href = "https://solved.ac/">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/solved_ac.png">
+                    <img draggable = "false" alt src = "../images/sites/solved_ac.png">
                 </div>
                 <div class = "tile-name">
                     <span>백준</span>
@@ -69,7 +69,7 @@
             </a>
             <a class = "tile" title = "BlackBoard" href = "https://kulms.korea.ac.kr/">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/blackboard.png">
+                    <img draggable = "false" alt src = "../images/sites/blackboard.png">
                 </div>
                 <div class = "tile-name">
                     <span>BlackBoard</span>
@@ -77,7 +77,7 @@
             </a>
             <a class = "tile" title = "알고리즘 공부" href = "https://blog.naver.com/kks227/220775134486">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/naver_blog.png">
+                    <img draggable = "false" alt src = "../images/sites/naver_blog.png">
                 </div>
                 <div class = "tile-name">
                     <span>알고리즘 공부</span>
@@ -85,7 +85,7 @@
             </a>
             <a class = "tile" title = "빌드 사이트" href = "https://ideone.com/">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/ide.png">
+                    <img draggable = "false" alt src = "../images/sites/ide.png">
                 </div>
                 <div class = "tile-name">
                     <span>빌드 사이트</span>
@@ -93,7 +93,7 @@
             </a>
             <a class = "tile" title = "인공지능 신문" href = "https://www.aitimes.kr/">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/ai_news.png">
+                    <img draggable = "false" alt src = "../images/sites/ai_news.png">
                 </div>
                 <div class = "tile-name">
                     <span>빌드 사이트</span>
@@ -101,7 +101,7 @@
             </a>
             <a class = "tile" title = "바로가기 추가">
                 <div class = "tile-icon">
-                    <img draggable = "false" alt src = "images/sites/add.svg">
+                    <img draggable = "false" alt src = "../images/sites/add.svg">
                 </div>
                 <div class = "tile-name">
                     <span>바로가기 추가</span>
@@ -109,7 +109,7 @@
             </a>
         </div>
         <div id = "settings">
-            <img id = "pencil" draggable = "false" alt src = "images/icon_pencil.svg">
+            <img id = "pencil" draggable = "false" alt src = "../images/icon_pencil.svg">
             <span>        Chrome 맞춤설정</span>
         </div>
     </div>
